src/objects/Country_Descriptor__c.object
<CustomObject>
    <description>Descriptor object used to map text representative inputs of countries to parent Standardized Country records for translative mapping.</description>
    <fields>
        <fullName>CountrySoundexKey__c</fullName>
        <description>This is soundex code for each country.</description>
        <externalId>true</externalId>
        <label>CountrySoundexKey</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Textual descriptor for the parent Standardized Country. Any record on an object enabled for mapping which has this value in it&apos;s country field will be updated to the standardized value chosen by the organizations preferences.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Standardized_Country__c</fullName>
        <label>Standardized Country</label>
        <referenceTo>Standardized_Country__c</referenceTo>
        <relationshipLabel>Country Descriptors</relationshipLabel>
        <relationshipName>Country_Descriptors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Country Descriptor</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Descriptors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>